sass/pages/_menu.scss
.menu__background__img {
  height: 275px;
  width: 100%;
  position: relative;
  z-index: 0;

  > img {
    width: 100%;
    object-fit: cover;
  }
}

.menu__body {
  background-color: $background-color;
  border-radius: 40px 40px 0 0;
  padding: 0 13px;
  margin-top: -48px;
  display: flex;
  flex-direction: column;
  position: relative;
  z-index: 1;

  &__title {
    font-family: Shrikhand;
    font-size: 28px;
    font-style: italic;
    font-weight: 400;
    line-height: 41px;
    letter-spacing: 0em;
    text-align: left;
    margin: 34px 17px 40px 4px;
  }

  &__subtitle {
    font-size: 16px;
    font-weight: 300;
    line-height: 19px;
    letter-spacing: 0em;
    text-align: left;

    &__container {
      border-bottom: 3px solid $tertiary-color;
      width: 40px;
    }
  }

  &__cards {
    max-width: 634px;
    margin: auto;
    > :last-child {
      margin-bottom: 40px;
    }

    &__card {
      border-radius: 15px;
      margin-top: 10.5px;
      background-color: white;
      display: flex;
      max-width: 634px;

      &__title {
        font-size: 18px;
        font-weight: 500;
        line-height: 21px;
        letter-spacing: 0em;
        text-align: left;
        padding: 12px 0 5px 15px;
        display: flex;
      }

      &__selector {
        background-color: $tertiary-color;
        height: auto;
        border-radius: 0 15px 15px 0;
        // transition: width 0.5s ease;
        // align-items: center;
        // justify-content: center;

        &__tick {
          width: 0;
          height: 0;
        }
      }

      &__content {
        display: flex;

        &__container {
          display: flex;
          flex-direction: column;
          width: 100%;
        }

        &__text {
          font-size: 15px;
          font-weight: 300;
          line-height: 18px;
          letter-spacing: 0em;
          text-align: left;
          padding: 0 0 12px 15px;
          width: 80%;
        }

        &__price {
          font-size: 15px;
          font-weight: 700;
          line-height: 18px;
          letter-spacing: 0em;
          text-align: center;
          display: flex;
          justify-content: flex-end;
          padding-right: 13.5px;
          flex-grow: 1;
        }
      }
    }
  }
}

.menu__container {
  &__starters > * {
    opacity: 0;
    transform: translateY(20px);
    animation: appear 0.5s ease forwards;
    margin-bottom: 20px;
    animation-delay: 1s;
  }

  &__mains > * {
    opacity: 0;
    transform: translateY(20px);
    animation: appear 0.5s ease forwards;
    margin-bottom: 20px;
    animation-delay: 2s;
  }

  &__desserts > * {
    opacity: 0;
    transform: translateY(20px);
    animation: appear 0.5s ease forwards;
    margin-bottom: 20px;
    animation-delay: 3s;
  }
}

